# swoval

./: .appveyor.yml  .cirrus.yml  .gitignore  .scalafmt.conf  .travis.yml  LICENSE  README.md  build.sbt
.github/workflows/: scala.yml
apple-file-events/js/npm/: .gitignore  apfs.js  install.js  md5sum  package.json
apple-file-events/js/npm/lib/: swoval_apple_file_system.node
apple-file-events/js/npm/src/: .clang-format  swoval_apple_file_system.hpp  swoval_apple_file_system_api.cc  swoval_apple_file_system_api_node.cc
apple-file-events/js/src/main/resources/: CMakeLists.txt  apfs.js  install.js  package.json
apple-file-system/src/main/native/: sbt-apple-filesystem.c
directory-watcher/src/main/native/: CMakeLists.txt  sbt-apple-filesystem.c
files/: README.md
files/js/npm/: .gitignore  blah.js  files.js  foo.js  install.js  lib  package.json
files/js/npm/lib/: swoval_apple_file_system.node
files/js/npm/src/: swoval_apple_file_system.hpp  swoval_apple_file_system_api_node.cc
plugin/: README.md
plugin/src/main/scala/: MacOSXWatchServicePlugin.scala
project/: Build.scala  Dependencies.scala  SbtHelpers.scala  build.properties  build.sbt  plugins.sbt
project/com/swoval/: Build.scala  BuildKeys.scala  Dependencies.scala
reflect/src/test/resources/: Bar$.class.6  Bar$.class.7  Bar.scala.template  Buzz.scala.template
reform/src/main/scala/: package.scala
reform/src/test/scala/: ReformSpec.scala
src/main/scala/: MacOSXWatchService.scala  MacOSXWatchServicePlugin.scala
util/project/: Dependencies.scala
utilities/: diff_all_tests.sh
(+462 files in other folders)
