project (swoval_apple_file_system)
include_directories(${CMAKE_JS_INC})
file(GLOB SOURCE_FILES "src/*.hpp" )
file(GLOB SOURCE_FILES "src/*.cc" )
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
set (CMAKE_CXX_FLAGS "-framework Carbon -Wno-unused-command-line-argument -std=c++11")
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
